tests/diagnostics/assoc_unknown.kal
# Calling an associated function that doesn't exist on the type is an error.
struct P { x: i64 }
impl P { fn new() -> P = P { x: 0 }; }
{ let q: P = P::nope(); printi(q.x); };
